# coinjoin-pipeline

./: .dockerignore  .gitignore  Dockerfile  MIGRATION.md  README.md  TODO.md  btc-rpc-explorer.compose.yaml  command_builder.py  command_metadata.json  command_metadata.py  import-emulation-blocks.py  pyproject.toml  run-all-github.sh  run-all-local.sh  run-all.sh  run-btc-rpc-explorer.sh  run-pipeline-image.sh  runIt.sh
.github/workflows/: publish-pipeline-image.yaml  tests.yaml
container/: entrypoint.sh  launcher.sh
docs/: analysis-semantics.md  pbs-stage-contract.md  runner-docker-image-store.md
docs/legacy/blocksciEmulatorAnalysis/: metacentrum-pbs-command.sh
examples/: external-analysis.yaml  metacentrum-mainnet-analyze.yaml  metacentrum-mainnet-parse.yaml  metacentrum-regtest-s3.yaml  metacentrum-s3.yaml
notebooks/: Analysis.ipynb
notebooks/.ipynb_checkpoints/: Analysis-checkpoint.ipynb
pipeline/: analysis.sh  compose.yaml  delete.sh  emulate.sh  lint.py  mypy.ini  pyproject.toml  recreate.sh
pipeline/client/: Dockerfile  __init__.py  artifacts.py  blocksci_analyze_s3_template.sh  blocksci_parse_s3_template.sh  blocksci_s3_template.sh  blocksci_update_s3_template.sh  build.sh  cli_options.py  coinjoin_analysis_s3_template.sh  coinjoin_analysis_template.sh  compose.yaml  develop.sh  kubernetes.py  mappings_s3_template.sh  mappings_template.sh  pbs.py  pipeline_logging.py  research.py  run_catalog.py  runtime.py  scenarios.py  unified_report_s3_template.sh  wrapper.py
pipeline/client/scenarios/: defaultCoinJoin.json
pipeline/exporters/: __init__.py  artifact_paths.py  blocksci_analysis.py  blocksci_export.py  cli.py  common.py  comparison.py  emulator_data.py  heuristics.py  integration_diagnostics.py  manifest.py  markdown_report.py  normalization.py  report_builder.py  scenario.py  script_metadata.py  unified_report.py
pipeline/exporters/blocksci/: __init__.py  analysis.py  detector.py
scenarios/: defaultJoinMarket.json  overactive-k8s-small.json
scripts/: generate-command-metadata.py
src/coinjoin_pipeline/: __init__.py  builder.py  clean_s3.py  cli.py  command_metadata.py  commands.py  configuration.py  doctor.py  download_report.py  host.py  images.py  lint.py  manifest.py  pipeline_image.py  process.py  runs.py  watch.py
src/coinjoin_pipeline/_runtime/: __init__.py
src/coinjoin_pipeline/btc-data/data/data/regtest/chainstate/: MANIFEST-000002
src/coinjoin_pipeline/metadata/: command_metadata.json
src/coinjoin_pipeline/resources/container/: launcher.sh
src/coinjoin_pipeline/resources/scenarios/: overactive-k8s-small.json  overactive-local.json
tests/: test-command-builder-contract.sh  test-kubernetes-k3d.sh  test-kubernetes-missing-client-diagnostics.sh  test-kubernetes-pbs-analysis.sh  test-kubernetes-s3-minio.sh  test-local-pbs-analysis.sh  test-parallel-pbs-analysis.sh  test-podman-no-host-docker.sh  test-run-all-local-build.sh  test-run-all-local-interrupt.sh  test-run-pipeline-image.sh  test-runIt-doctor.sh  test-runIt-joinmarket-local-docker.sh  test-runIt-overactive-local-docker.sh  test-runIt-overactive-local.sh  test-runIt-parallel-local-docker.sh  test_command_builder.py
tests/pipeline/: test_analysis_exit_status.sh  test_analysis_stale_network.sh  test_artifacts.py  test_blocksci_analysis.py  test_cli_contract.py  test_coerce_sats.py  test_emulate_exit_status.sh  test_emulate_interrupt_cleanup.sh  test_kubernetes_diagnostics.py  test_pbs.py  test_recreate_exit_status.sh  test_recreate_interrupt_cleanup.sh  test_research.py  test_run_catalog.py  test_s3_backend.py  test_scenarios.py  test_unified_report.py  test_wrapper.py
tests/support/pbs/: Dockerfile  entrypoint.sh  local-pbs.sh  local_scratch_hook.py  pbs-env.sh
tests/support/pbs-runtime/: blocksci_template.sh  coinjoin_analysis_template.sh  mappings_template.sh  pbs.py
tests/support/pbs/pbs-bin/: pbsnodes  qdel  qstat  qsub
tests/unit/: test_clean_s3.py  test_cli.py  test_configuration.py  test_download_report.py  test_packaged_scenarios.py  test_publish_workflow.py  test_repository_independence.py  test_watch.py
