[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coinjoin-pipeline"
version = "0.1.0"
description = "Reproducible CoinJoin emulation and analysis pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
builder = ["questionary>=2.1,<3", "rich>=13.9,<15"]
test = ["pytest>=8,<9"]

[dependency-groups]
dev = ["ruff>=0.6"]

[project.scripts]
coinjoin-pipeline = "coinjoin_pipeline.cli:main"
cjp = "coinjoin_pipeline.cli:main"
coinjoin-command-builder = "coinjoin_pipeline.builder:main"
coinjoin-pipeline-image = "coinjoin_pipeline.pipeline_image:main"
lint = "coinjoin_pipeline.lint:main"

[tool.setuptools]
packages = [
  "coinjoin_pipeline",
  "coinjoin_pipeline.metadata",
  "coinjoin_pipeline.resources",
  "coinjoin_pipeline.resources.container",
  "coinjoin_pipeline.resources.scenarios",
  "coinjoin_pipeline._runtime",
  "coinjoin_pipeline._runtime.client",
  "coinjoin_pipeline._runtime.exporters",
]
package-dir = {coinjoin_pipeline = "src/coinjoin_pipeline", "coinjoin_pipeline._runtime" = "src/coinjoin_pipeline/_runtime", "coinjoin_pipeline._runtime.client" = "pipeline/client", "coinjoin_pipeline._runtime.exporters" = "pipeline/exporters"}

[tool.setuptools.package-data]
coinjoin_pipeline = [
  "metadata/*.json",
  "resources/container/*.sh",
  "resources/scenarios/*.json",
]
"coinjoin_pipeline._runtime.client" = ["*.sh", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/pipeline"]

[tool.mypy]
exclude = ["^emulation_logs/", "^notebooks/", "(^|/)build/"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["emulation_logs", "notebooks"]

[tool.ruff.lint.per-file-ignores]
"tests/pipeline/*.py" = ["E402"]
